<resources>
    <string name="app_name">QueMePongo2</string>

    <!--    navigation strings, Jere-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QueMePongo2</string>
    <string name="nav_header_subtitle">QueMePongo2@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>

    <!--    menu strings-->
    <string name="menu_home">Inicio</string>
    <string name="menu_objetos_personales">Objetos Personales</string>
    <string name="menu_ubicaciones">Ubicaciones</string>
    <string name="menu_cerrar_sesion">Cerrar sesion</string>
    <string name="menu_nuevo_usuario">Agregar Usuario</string>
    <string name="linea"></string>

    <!--    login strings-->
    <string name="txt_agregar_usuario">Bienvenido, presione el botón para agregar un usuario</string>
    <string name="title_activity_usuariologin">Usuario inicio</string>
    <string name="txt_usuario">Usuario</string>
    <string name="temperaturaActual">no funciono la api :c</string>

    <!--    ubicaciones strings-->
    <string name="ubicacion_1">Ubicacion_1</string>
    <string name="ubicacion_2">Ubicacion_2</string>
    <string name="ubicacion_3">Ubicacion_3</string>
    <string name="ubicacion_4">Ubicacion_4</string>

    <!--    main_activity strings-->
    <string name="temperatura_actual">Temperatura actual</string>
    <string name="ubicacion">Ubicacion:  </string>
    <string name="txt_temperatura_actual">Temperatura Actual</string>

    <!--    Objetos strings-->
    <string name="boton_agregar_ciudad">Agregar</string>
    <string name="boton_buscar">Buscar</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_logeo_activity">Logeo</string>
    <string name="txtLoginUsuario">Usuario</string>
    <string name="txtClaveLogin">Clave</string>
    <string name="botonLogin">Ingresar</string>
    <string name="botonEliminar">Eliminar</string>
    <string name="botonPredeterminar">Predeterminar</string>
    <string name="botonMostrarSatelite">Mostrar Mapa Satelital</string>
    <string name="textViewBuscador">Buscador</string>
    <string name="boton_registrar">Registrar</string>
    <string name="boton_hombre">Hombre</string>
    <string name="boton_mujer">Mujer</string>


    <!--    Preferencias string-->
    <string name="preferencias_boton_guardar">Guardar</string>
    <string name="preferencias_instrucciones">Aqui puedes guardar tus preferencias</string>
    <string name="txtBotonPredeterminar">Predeterminar</string>
    <string name="txtViewCrearNuevoUsuario">Crear nuevo usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="TituloLoginActivity">Iniciar sesion</string>
    <string name="txtViewSugerencia">Sugerencia: </string>
    <string name="textViewViento">Viento</string>
    <string name="textViewHumedad">Humedad:</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="textViewDetalles">Detalles</string>
</resources>
