<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home"
            android:title="@string/menu_home"
            android:visible="true" />
        <item
            android:id="@+id/nav_objetos_personales"
            android:icon="@mipmap/ic_lentes"
            android:title="@string/menu_objetos_personales" />
        <item
            android:id="@+id/nav_ubicaciones"
            android:icon="@mipmap/ic_location"
            android:title="@string/menu_ubicaciones" />
    </group>
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@mipmap/ic_logout"
            android:title="@string/menu_cerrar_sesion" />

</menu>
