<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.s21.quemepongo2front.creadoresDeFragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_objetos_personales"
        android:name="com.s21.quemepongo2front.creadoresDeFragments.Preferencias.PreferenciasFragment"
        android:label="@string/menu_objetos_personales"
        tools:layout="@layout/fragment_preferencias" />

    <fragment
        android:id="@+id/nav_ubicaciones"
        android:name="com.s21.quemepongo2front.creadoresDeFragments.ubicaciones.UbicacionesFragment"
        android:label="@string/menu_ubicaciones"
        tools:layout="@layout/fragment_ubicaciones" />

    <fragment
        android:id="@+id/nav_cerrar_sesion"
        android:name="com.s21.quemepongo2front.creadoresDeFragments.Sesion.CerrarSesion"
        android:label="@string/menu_cerrar_sesion"
        tools:layout="@layout/fragment_cerrar_sesion" />

    <fragment
        android:id="@+id/nav_nuevo_usuario"
        android:name="com.s21.quemepongo2front.creadoresDeFragments.agregar_usuario.UsuarioFragment"
        android:label="@string/menu_nuevo_usuario"
        tools:layout="@layout/fragment_agregar_usuario" />
</navigation>