<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/textViewViento"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textHumedad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="71dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/textViewHumedad"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="1dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/textViento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewUbicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/ubicacion"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewSugerencia"
        android:layout_width="395dp"
        android:layout_height="33dp"
        android:layout_marginTop="388dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/txtViewSugerencia"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto_thin"
        android:text="Detalles"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViento"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="121dp"
        android:background="#59303F9F"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSugerencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445">

        <TextView
            android:id="@+id/temperatura_actual"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_light"
            android:text=" "
            android:textAlignment="center"
            android:textSize="58sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="90dp"
            android:layout_height="82dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@mipmap/contrast" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="363dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>